crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__value__tests__value_with_constrained_annotation.snap
---
source: crates/nash-parse/src/declaration/value.rs
assertion_line: 200
description: "max : Ord 'a => 'a -> 'a -> 'a\nmax a b = a\n"
---
Value(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 3,
                column: 1,
            },
        },
        value: Value {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 1,
                    },
                    end: Position {
                        line: 2,
                        column: 4,
                    },
                },
                value: "max",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 7,
                        },
                        end: Position {
                            line: 2,
                            column: 8,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 11,
                    },
                    end: Position {
                        line: 2,
                        column: 12,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "a",
                },
            },
            annotation: Some(
                Annotation {
                    constraints: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 13,
                                },
                            },
                            value: Constraint {
                                class: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 10,
                                        },
                                    },
                                    value: "Ord",
                                },
                                module: None,
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 13,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                ],
                            },
                        },
                    ],
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 17,
                            },
                            end: Position {
                                line: 1,
                                column: 31,
                            },
                        },
                        value: Lambda {
                            from: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 19,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                            to: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 23,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 31,
                                    },
                                },
                                value: Lambda {
                                    from: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 23,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 25,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    to: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 29,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 31,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                },
                            },
                        },
                    },
                },
            ),
            attributes: [],
        },
    },
)
